Update Gradle setup